<resources>
    <string name="app_name">Calculator</string>
    <string name="tv_solve">Solve problem with me!</string>
    <string name="tv_zero">0</string>
    <string name="clear">C</string>
    <string name="skobka">()</string>
    <string name="prosent">%</string>
    <string name="devide">/</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="multi">X</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="minus">-</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="plus">+</string>
    <string name="zero">0</string>
    <string name="dot">,</string>
    <string name="eq">=</string>
    <string name="back">l</string>
    <string name="zapis">0</string>

</resources>
